<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundActivity"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/editText_emailLogar"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_editext_redondo"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/editText_senhaLogar"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_editext_redondo"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="@+id/editText_emailLogar"
        app:layout_constraintStart_toStartOf="@+id/editText_emailLogar"
        app:layout_constraintTop_toBottomOf="@+id/editText_emailLogar" />

    <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
        android:id="@+id/button_logar"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_button_redondo"
        android:text="@string/botao_logar"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/editText_senhaLogar"
        app:layout_constraintStart_toStartOf="@+id/editText_senhaLogar"
        app:layout_constraintTop_toBottomOf="@+id/editText_senhaLogar"
        app:spinning_bar_color="#fff"
        app:spinning_bar_width="4dp"
        app:spinning_bar_padding="6dp"/>

    <TextView
        android:id="@+id/textView_criarConta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/NaoTemConta"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/editText_senhaLogar"
        app:layout_constraintStart_toStartOf="@+id/editText_senhaLogar"
        app:layout_constraintTop_toBottomOf="@+id/editText_senhaLogar" />
</androidx.constraintlayout.widget.ConstraintLayout>