<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundActivity"
    tools:context=".activity.RegistroActivity">

    <EditText
        android:id="@+id/editText_nome"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/bg_editext_redondo"
        android:ems="10"
        android:hint="Nome"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_editext_redondo"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="@+id/editText_nome"
        app:layout_constraintStart_toStartOf="@+id/editText_nome"
        app:layout_constraintTop_toBottomOf="@+id/editText_nome" />

    <EditText
        android:id="@+id/editText_senha"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_editext_redondo"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="@+id/editText_email"
        app:layout_constraintStart_toStartOf="@+id/editText_email"
        app:layout_constraintTop_toBottomOf="@+id/editText_email" />

    <EditText
        android:id="@+id/editText_senhaConfirmar"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_editext_redondo"
        android:ems="10"
        android:hint="Confirmar Senha"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/editText_senha"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editText_senha"
        app:layout_constraintTop_toBottomOf="@+id/editText_senha" />

    <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
        android:id="@+id/button_registrar"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_button_redondo"
        android:text="@string/cadastrar"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/editText_senhaConfirmar"
        app:layout_constraintStart_toStartOf="@+id/editText_senhaConfirmar"
        app:layout_constraintTop_toBottomOf="@+id/editText_senhaConfirmar"
        app:spinning_bar_color="#fff"
        app:spinning_bar_width="4dp"
        app:spinning_bar_padding="6dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>